# VectorKit

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: task.md
.github/workflows/: ci.yml
docs/: PLAN.md  architecture.md  development.md  index.html  landscape.md  references.md  setup-vector.md  style.css  web-setup.md
docs/design/: p3-03-llm-gateway.md  p5-01-self-host-web-setup.md
infra/: README.md
infra/raspberry-pi/: README.md  custom.toml.template
infra/raspberry-pi/boot-files/: README.md  userconf.txt.example
infra/wire-pod/: README.md  install.sh
libs/vectorkit/: __init__.py  connection.py
libs/vectorkit/tests/: test_config.py
prototypes/: README.md
prototypes/hello-vector/: README.md  main.py
prototypes/llm-gateway/: .env.example  README.md  main.py  requirements.txt
scripts/: run-tests.sh
